@@ -3,7 +3,6 @@ package ru.job4j.collection;
 import org.junit.Test;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.Matchers.is;
@@ -17,7 +16,7 @@ public class ConvertListTest {
         in.add(new int[]{1});
         in.add(new int[]{2, 3});
         List<Integer> actual = ConvertList.convert(in);
-        List<Integer> expected = Arrays.asList(1, 2, 3);
+        List<Integer> expected = List.of(1, 2, 3);
         assertThat(actual, is(expected));
     }
 
